--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server/index.js",
   "dependencies": {
+    "amfinav": "0.0.4",
     "angular": "~1.6.0",
     "angular-animate": "~1.6.0",
     "angular-aria": "~1.6.0",
@@ -13,6 +14,7 @@
     "angular-ui-bootstrap": "^2.0.1",
     "angular-ui-router": "~0.3.1",
     "angular-validation-match": "^1.9.0",
+    "angular2-highcharts": "^0.5.5",
     "babel-polyfill": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.3",
@@ -31,6 +33,7 @@
     "express-session": "^1.11.3",
     "fast-json-patch": "^1.0.0",
     "font-awesome": ">=4.1.0",
+    "highcharts-ng": "^1.1.0",
     "jsonwebtoken": "^7.0.0",
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
